--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
   },
   "dependencies": {
     "nuxt": "^1.0.0",
-    "storyblok-nuxt": "0.0.3"
+    "storyblok-nuxt": "0.0.3",
+    "vue-template-compiler": "^2.5.16"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "coffee-loader": "^0.9.0",
     "coffee-script": "^1.12.7",
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0",
-    "node-sass": "^4.7.2",
+    "eslint-plugin-vue": "^4.4.0",
+    "node-sass": "^4.8.3",
     "sass-loader": "^6.0.7"
   }
 }
