--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/google-analytics": "^2.0.2",
     "nuxt": "^1.0.0",
     "storyblok-nuxt": "0.0.3",
     "vue-template-compiler": "^2.5.16"
