--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/google-analytics": "^2.0.2",
+    "normalize.css": "^8.0.0",
     "nuxt": "^1.0.0",
     "storyblok-nuxt": "0.0.3",
     "vue-template-compiler": "^2.5.16"
